호텔 업데이트 창에서 배너 업로드하게 수정